--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="paddle player-paddle"></div>
 
-        <div class="ball"></div>
+        <div class="ball"><img src="img/uwu.png" height="20px;" width="20px;"id="uwu"></div>
 
         <div class="paddle computer-paddle"></div>
     </div>
